<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddVehicleActivity">
    <LinearLayout
    android:background="@android:drawable/dialog_holo_light_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <com.example.android.mileage.Utilities.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/vehicle_name"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/vehicleName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorDateBar"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="horizontal"
            android:paddingTop="9dp">

            <LinearLayout
                android:layout_weight="7.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <com.example.android.mileage.Utilities.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/vehicle_reg_no"
                    android:textColor="@android:color/black"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/vehicleId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorDateBar"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="15dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="30dp"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/vehicleTypeSpinner"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/v0"
                    android:backgroundTint="@color/colorDateBar" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:background="@color/menubg"
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:text="@string/action_save" />

    </LinearLayout>
</LinearLayout>

    <com.inmobi.ads.InMobiBanner
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/banner"
        ads:refreshInterval="60"
        ads:placementId="1469048772162" />

</RelativeLayout>
