<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/vehicleSpinner"
                    style="@style/spinner_style" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <com.example.android.mileage.Utilities.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/current_meter_reading"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/curretMeterReadinginKms"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorDateBar"
                        android:inputType="numberDecimal"
                        android:padding="12dp"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.9"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/petrol_price_per_litre"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/ptrlPricePerLtr"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorDateBar"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginStart="6dp"
                        android:paddingTop="9dp"
                        android:gravity="left"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="65dp">

                        <!--<Spinner-->
                            <!--android:backgroundTint="@color/colorDateBar"-->
                            <!--android:id="@+id/vehicleTypeSpinner"-->
                            <!--android:layout_width="55dp"-->
                            <!--android:layout_height="55dp"-->
                            <!--android:background="@drawable/v0" />-->

                        <Spinner
                            android:backgroundTint="@color/colorDateBar"
                            android:layout_marginStart="6dp"
                            android:id="@+id/petroleumCompanySpinner"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:background="@drawable/p0" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginEnd="12dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/amount_of_petrol_filled"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/amntOfPtrlFilled"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorDateBar"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:singleLine="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/petrol_filled_in_litres"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/ptrlFilledInLtrs"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorDateBar"
                            android:enabled="false"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.example.android.mileage.Utilities.CustomTextView
                    android:singleLine="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/petrol_filled_date"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/datePickerBox"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorDateBar"
                        android:inputType="numberDecimal"
                        android:padding="12dp"
                        android:textSize="13sp" />

                </LinearLayout>

                <Button
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/menubg"
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="24dp"
                    android:text="@string/action_save" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.inmobi.ads.InMobiBanner
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/banner"
        ads:refreshInterval="60"
        ads:placementId="1469048772162" />

</RelativeLayout>
