<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MileageFormActivity">

    <ScrollView
        android:layout_above="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:layout_marginStart="12dp"
                        android:id="@+id/vehicleNameAndNo"
                        android:layout_weight="8"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:layout_height="25dp"
                        android:text="Ka 17 Ek 212"
                        android:textColor="@android:color/black"
                        android:textSize="14dp" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/vehicleTypeImg"
                        android:layout_width="0dp"
                        android:layout_height="25dp" />

                    <View
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="1dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <com.example.android.mileage.Utilities.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/current_meter_reading"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/curretMeterReadinginKms"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorEditBoxes"
                        android:inputType="numberDecimal"
                        android:padding="12dp"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <com.example.android.mileage.Utilities.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/last_meter_reading"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/lastMeterReadinginKms"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/colorEditBoxes"
                        android:enabled="false"
                        android:inputType="numberDecimal"
                        android:padding="12dp"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.9"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/petrol_price_per_litre"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/ptrlPricePerLtr"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorEditBoxes"
                            android:enabled="false"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="6dp"
                        android:layout_weight="2"
                        android:gravity="left"
                        android:orientation="horizontal"
                        android:paddingTop="9dp">

                        <!--<ImageView-->
                        <!--android:id="@+id/vehicleTypeImg"-->
                        <!--android:layout_width="55dp"-->
                        <!--android:layout_height="55dp"-->
                        <!--android:background="@drawable/v0" />-->

                        <ImageView
                            android:id="@+id/petroleumCompanyImg"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="6dp"
                            android:background="@drawable/p6" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/amount_of_petrol_filled"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/amntOfPtrlFilled"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorEditBoxes"
                            android:enabled="false"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/petrol_filled_in_litres"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/ptrlFilledInLtrs"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorEditBoxes"
                            android:enabled="false"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/petrol_ended_date"
                            android:textColor="@android:color/black"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/toDatePickerBox"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorEditBoxes"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <com.example.android.mileage.Utilities.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:text="@string/petrol_filled_date"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/fromDatePickerBox"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorEditBoxes"
                            android:enabled="false"
                            android:inputType="numberDecimal"
                            android:padding="12dp"
                            android:textSize="13sp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/mileageBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/menubg"
                    android:text="@string/mileage"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/mileageLyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <com.example.android.mileage.Utilities.CustomTextView
                        android:id="@+id/mileageResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="9dp"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.inmobi.ads.InMobiBanner
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/banner"
        ads:refreshInterval="60"
        ads:placementId="1469048772162" />

</RelativeLayout>
